docs/0.19/_sources/api/gammapy.datasets.SpectrumDataset.rst.txt
SpectrumDataset
===============

.. currentmodule:: gammapy.datasets

.. autoclass:: SpectrumDataset
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SpectrumDataset.background
      ~SpectrumDataset.background_model
      ~SpectrumDataset.counts
      ~SpectrumDataset.data_shape
      ~SpectrumDataset.edisp
      ~SpectrumDataset.energy_range
      ~SpectrumDataset.energy_range_fit
      ~SpectrumDataset.energy_range_safe
      ~SpectrumDataset.evaluators
      ~SpectrumDataset.excess
      ~SpectrumDataset.exposure
      ~SpectrumDataset.geoms
      ~SpectrumDataset.mask
      ~SpectrumDataset.mask_fit
      ~SpectrumDataset.mask_fit_image
      ~SpectrumDataset.mask_image
      ~SpectrumDataset.mask_safe
      ~SpectrumDataset.mask_safe_edisp
      ~SpectrumDataset.mask_safe_image
      ~SpectrumDataset.mask_safe_psf
      ~SpectrumDataset.models
      ~SpectrumDataset.name
      ~SpectrumDataset.psf
      ~SpectrumDataset.stat_type
      ~SpectrumDataset.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~SpectrumDataset.copy
      ~SpectrumDataset.create
      ~SpectrumDataset.cutout
      ~SpectrumDataset.downsample
      ~SpectrumDataset.fake
      ~SpectrumDataset.from_dict
      ~SpectrumDataset.from_geoms
      ~SpectrumDataset.from_hdulist
      ~SpectrumDataset.info_dict
      ~SpectrumDataset.npred
      ~SpectrumDataset.npred_background
      ~SpectrumDataset.npred_signal
      ~SpectrumDataset.pad
      ~SpectrumDataset.peek
      ~SpectrumDataset.plot_counts
      ~SpectrumDataset.plot_excess
      ~SpectrumDataset.plot_fit
      ~SpectrumDataset.plot_masks
      ~SpectrumDataset.plot_residuals
      ~SpectrumDataset.plot_residuals_spatial
      ~SpectrumDataset.plot_residuals_spectral
      ~SpectrumDataset.read
      ~SpectrumDataset.resample_energy_axis
      ~SpectrumDataset.reset_data_cache
      ~SpectrumDataset.residuals
      ~SpectrumDataset.slice_by_energy
      ~SpectrumDataset.slice_by_idx
      ~SpectrumDataset.stack
      ~SpectrumDataset.stat_array
      ~SpectrumDataset.stat_sum
      ~SpectrumDataset.to_dict
      ~SpectrumDataset.to_hdulist
      ~SpectrumDataset.to_image
      ~SpectrumDataset.to_masked
      ~SpectrumDataset.to_region_map_dataset
      ~SpectrumDataset.to_spectrum_dataset
      ~SpectrumDataset.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: background
   .. autoattribute:: background_model
   .. autoattribute:: counts
   .. autoattribute:: data_shape
   .. autoattribute:: edisp
   .. autoattribute:: energy_range
   .. autoattribute:: energy_range_fit
   .. autoattribute:: energy_range_safe
   .. autoattribute:: evaluators
   .. autoattribute:: excess
   .. autoattribute:: exposure
   .. autoattribute:: geoms
   .. autoattribute:: mask
   .. autoattribute:: mask_fit
   .. autoattribute:: mask_fit_image
   .. autoattribute:: mask_image
   .. autoattribute:: mask_safe
   .. autoattribute:: mask_safe_edisp
   .. autoattribute:: mask_safe_image
   .. autoattribute:: mask_safe_psf
   .. autoattribute:: models
   .. autoattribute:: name
   .. autoattribute:: psf
   .. autoattribute:: stat_type
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: copy
   .. automethod:: create
   .. automethod:: cutout
   .. automethod:: downsample
   .. automethod:: fake
   .. automethod:: from_dict
   .. automethod:: from_geoms
   .. automethod:: from_hdulist
   .. automethod:: info_dict
   .. automethod:: npred
   .. automethod:: npred_background
   .. automethod:: npred_signal
   .. automethod:: pad
   .. automethod:: peek
   .. automethod:: plot_counts
   .. automethod:: plot_excess
   .. automethod:: plot_fit
   .. automethod:: plot_masks
   .. automethod:: plot_residuals
   .. automethod:: plot_residuals_spatial
   .. automethod:: plot_residuals_spectral
   .. automethod:: read
   .. automethod:: resample_energy_axis
   .. automethod:: reset_data_cache
   .. automethod:: residuals
   .. automethod:: slice_by_energy
   .. automethod:: slice_by_idx
   .. automethod:: stack
   .. automethod:: stat_array
   .. automethod:: stat_sum
   .. automethod:: to_dict
   .. automethod:: to_hdulist
   .. automethod:: to_image
   .. automethod:: to_masked
   .. automethod:: to_region_map_dataset
   .. automethod:: to_spectrum_dataset
   .. automethod:: write
